libMidi: Add native CoreMidi implementation for MacOS